--- a/src/app/achievements/achievements.page.html
+++ b/src/app/achievements/achievements.page.html
@@ -1,13 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>achievements</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">achievements</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header><ion-toolbar>
+  <ion-title>Mis Logros</ion-title>
+  <ion-buttons slot="end">
+    <ion-button routerLink="/add-achievement"><ion-icon name="add"></ion-icon></ion-button>
+  </ion-buttons>
+</ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <ion-list>
+    <ion-item *ngFor="let a of list">
+      <ion-label>
+        <h3>{{ a.title }}</h3>
+        <p>{{ diffs.find(d=>d.id===a.difficultyId)?.name }}</p>
+      </ion-label>
+      <ion-checkbox slot="end" [checked]="a.completed" (ionChange)="toggle(a)"></ion-checkbox>
+    </ion-item>
+  </ion-list>
 </ion-content>
