--- a/src/app/add-achievement/add-achievement.page.html
+++ b/src/app/add-achievement/add-achievement.page.html
@@ -1,13 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>add-achievement</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add-achievement</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header><ion-toolbar>
+  <ion-title>Nuevo Logro</ion-title>
+</ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <form [formGroup]="form" (ngSubmit)="save()">
+    <ion-item><ion-label position="stacked">Título</ion-label>
+      <ion-input formControlName="title"></ion-input>
+    </ion-item>
+    <ion-item><ion-label position="stacked">Descripción</ion-label>
+      <ion-textarea formControlName="description"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label>Dificultad</ion-label>
+      <ion-select formControlName="difficultyId">
+        <ion-select-option *ngFor="let d of diffs" [value]="d.id">
+          {{ d.name }} ({{ d.points }} pts)
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-button expand="full" type="submit" [disabled]="form.invalid">Guardar</ion-button>
+  </form>
 </ion-content>
