--- a/src/app/add-difficulty/add-difficulty.page.html
+++ b/src/app/add-difficulty/add-difficulty.page.html
@@ -1,13 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>add-difficulty</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">add-difficulty</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header><ion-toolbar>
+  <ion-title>Nueva Dificultad</ion-title>
+</ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <form [formGroup]="form" (ngSubmit)="save()">
+    <ion-item><ion-label position="stacked">Nombre</ion-label><ion-input formControlName="name"></ion-input></ion-item>
+    <ion-item><ion-label position="stacked">Puntos</ion-label><ion-input type="number" formControlName="points"></ion-input></ion-item>
+    <ion-button expand="full" type="submit" [disabled]="form.invalid">Crear</ion-button>
+  </form>
 </ion-content>
