--- a/src/app/difficulties/difficulties.page.html
+++ b/src/app/difficulties/difficulties.page.html
@@ -1,13 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>difficulties</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">difficulties</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header><ion-toolbar>
+  <ion-title>Dificultades</ion-title>
+  <ion-buttons slot="end">
+    <ion-button (click)="goAdd()"><ion-icon name="add"></ion-icon></ion-button>
+  </ion-buttons>
+</ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <ion-list>
+    <ion-item *ngFor="let d of list">
+      {{ d.name }} — {{ d.points }} pts
+    </ion-item>
+  </ion-list>
 </ion-content>
