--- a/src/app/rewards/rewards.page.html
+++ b/src/app/rewards/rewards.page.html
@@ -1,13 +1,11 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>rewards</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">rewards</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-header><ion-toolbar>
+  <ion-title>Recompensas</ion-title>
+  <ion-buttons slot="end">
+    <ion-button (click)="goAdd()"><ion-icon name="add"></ion-icon></ion-button>
+  </ion-buttons>
+</ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <ion-list>
+    <ion-item *ngFor="let r of list">{{ r.name }}</ion-item>
+  </ion-list>
 </ion-content>
